[package]
name = "probe"
version = "0.5.0"
authors = ["Josh Stone <cuviper@gmail.com>"]
description = "Static instrumentation probes"
documentation = "https://docs.rs/probe/"
homepage = "https://github.com/cuviper/rust-libprobe"
repository = "https://github.com/cuviper/rust-libprobe"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.66"
exclude = ["/.github/**"]

[lib]
name = "probe"
crate-type = ["rlib"]
